--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,14 +15,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Upload artifact (GitHub Pages)
+      - name: Upload site files
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: ./
+          path: |
+            Exam.html
+            question.txt
+            README.md
 
   deploy:
     needs: build
